[tool.poetry]
name = "nightwalker"
version = "0.1.0"
description = "We need more free software interface testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["chineseluo <848257135@qq.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://docs.httprunner.org"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
loguru = "0.5.3"
requests = "2.24.0"
PyYAML = "5.3.1"

[tool.poetry.scripts]
nw = "nightwalker.cli:main"
nightwalker = "nightwalker.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"